<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>iot_subscriber</name>
  <version>0.0.2</version>
  <description>Examples of minimal IoT subscriber</description>
  <maintainer email="steve@prismtech.com">Steve Osselton</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>iot_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>iot_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
